# capacitor-pelicano

./: .npmrc  CapacitorPelicano.podspec  README.md  package-lock.json  package.json  rollup.config.js
.github/workflows/: release-package.yml
android/: build.gradle
android/src/main/cpp/: CMakeLists.txt
android/src/main/cpp/pelicano/: CMakeLists.txt  FuncionesPelicanoControl.cpp  PelicanoControl.cpp  PelicanoControl.hpp  PelicanoControl.i  ValidatorPelicano.cpp  main.cpp
android/src/main/java/com/coink/plugins/pelicano/: CoinNotifier.java  CoinsChannels.java  CustomThread.java  Pelicano.java  PelicanoEvent.java  PelicanoException.java  PelicanoPlugin.java  PelicanoResponse.java
android/src/main/java/hardware/pelicano/: CoinError_t.java  CoinLost_t.java  CoinPolling_t.java  ErrorCodeExComm_t.java  ErrorCodePolling_t.java  FaultCode_t.java  GlobalVariables.java  PelicanoClass.java  PelicanoControl.java  PelicanoControlClass.java  PelicanoControlJAVA_wrap.cxx  PelicanoControlJNI.java  Response_t.java  SMClass.java  SWIGTYPE_p_std__vectorT_unsigned_char_t.java  SpdlogLevels_t.java  TestStatus_t.java
electron/: rollup.config.js
electron/src/: channels.ts  index.ts  utils.ts
example/: package.json
ios/Plugin/: Pelicano.swift  PelicanoPlugin.m  PelicanoPlugin.swift
ios/Plugin.xcodeproj/: project.pbxproj
ios/PluginTests/: PelicanoTests.swift
src/: definitions.ts  index.ts  web.ts
src/lib/: Validator.ts  index.ts  logger.ts
src/lib/dispenser/: Card.ts  Controller.ts  Dispenser.ts
